# bluetooth_scan

./: CMakeLists.txt  raspberrypi-toolchain.cmake
src/: ble_scan.c  blu_scan.c  data_sender.py  start_data_sender.sh
src/old_code/: config.c  main.cpp
utils/config_reader/include/: config_reader.h
utils/config_reader/src/: config_reader.c
utils/data/: scanned_devices.json
